--- a/nav/test-output/emailable-report.html
+++ b/nav/test-output/emailable-report.html
@@ -8,43 +8,28 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">6,590</td><td></td><td></td></tr>
+<tr><th colspan="8">FullSuite</th></tr>
+<tr><td><a href="#t0">AllTests</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">7,618</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nav.restassured</td><td><a href="#m0">gettotalamount</a></td><td rowspan="1">1756438984359</td><td rowspan="1">682</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.nav.restassured</td><td><a href="#m1">getHeaders</a></td><td rowspan="1">1756438978532</td><td rowspan="1">4578</td></tr><tr class="passedeven"><td><a href="#m2">getResponseStatus</a></td><td rowspan="1">1756438983122</td><td rowspan="1">1234</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">FullSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">AllTests &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.nav.assertions</td><td><a href="#m0">testTittle</a></td><td rowspan="1">1756835459774</td><td rowspan="1">52</td></tr><tr class="failedeven"><td><a href="#m1">testTittlecond</a></td><td rowspan="1">1756835459864</td><td rowspan="1">5</td></tr><tr class="failedodd"><td rowspan="1">com.nav.restassured</td><td><a href="#m2">gettotalamount</a></td><td rowspan="1">1756835465842</td><td rowspan="1">774</td></tr><tr><th colspan="4">AllTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.nav.firstTestNg</td><td><a href="#m3">action</a></td><td rowspan="1">1756835459896</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">launch</a></td><td rowspan="1">1756835459890</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m5">login</a></td><td rowspan="1">1756835459880</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m6">logout</a></td><td rowspan="1">1756835459904</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="2">com.nav.restassured</td><td><a href="#m7">getHeaders</a></td><td rowspan="1">1756835459907</td><td rowspan="1">4372</td></tr><tr class="passedodd"><td><a href="#m8">getResponseStatus</a></td><td rowspan="1">1756835464285</td><td rowspan="1">1555</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.nav.restassured#gettotalamount</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class io.restassured.path.xml.XmlPath cannot be cast to class java.util.ArrayList (io.restassured.path.xml.XmlPath is in unnamed module of loader &apos;app&apos;; java.util.ArrayList is in module java.base of loader &apos;bootstrap&apos;)
-	at com.nav.restassured.gettotalamount(restassured.java:43)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:687)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:63)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:995)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
+<h2>AllTests</h2><h3 id="m0">com.nav.assertions#testTittle</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">❌ FAILED: com.nav.assertions.testTittle<br/>🔍 Reason: expected [Oncart] but found [Opencart]</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Oncart] but found [Opencart]
+	at com.nav.assertions.testTittle(assertions.java:15)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at org.testng.TestRunner.privateRun(TestRunner.java:741)
-	at org.testng.TestRunner.run(TestRunner.java:616)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:413)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:373)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:312)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1274)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
-	at org.testng.TestNG.runSuites(TestNG.java:1112)
-	at org.testng.TestNG.run(TestNG.java:1079)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nav.restassured#getHeaders</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.nav.restassured#getResponseStatus</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.nav.assertions#testTittlecond</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">❌ FAILED: com.nav.assertions.testTittlecond<br/>🔍 Reason: expected [true] but found [false]</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.nav.assertions.testTittlecond(assertions.java:26)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.nav.restassured#gettotalamount</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">❌ FAILED: com.nav.restassured.gettotalamount<br/>🔍 Reason: class io.restassured.path.xml.XmlPath cannot be cast to class java.util.ArrayList (io.restassured.path.xml.XmlPath is in unnamed module of loader 'app'; java.util.ArrayList is in module java.base of loader 'bootstrap')</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class io.restassured.path.xml.XmlPath cannot be cast to class java.util.ArrayList (io.restassured.path.xml.XmlPath is in unnamed module of loader &apos;app&apos;; java.util.ArrayList is in module java.base of loader &apos;bootstrap&apos;)
+	at com.nav.restassured.gettotalamount(restassured.java:43)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.nav.firstTestNg#action</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.nav.firstTestNg#launch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.nav.firstTestNg#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.nav.firstTestNg#logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.nav.restassured#getHeaders</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.nav.restassured#getResponseStatus</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
